--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment": "^2.29.4",
     "next": "12.3.0",
     "next-seo": "^5.5.0",
     "next-themes": "^0.2.1",
