--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-seo": "^5.5.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-tabs": "^5.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
