--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,12 @@ dist
 
 # TernJS port file
 .tern-port
+
+# next-pwa
+
+**/public/sw.js
+**/public/sw.js.map
+**/public/workbox-*.js
+**/public/workbox-*.js.map
+**/public/worker-*.js
+**/public/worker-*.js.map
